@@ -23,6 +23,8 @@ Project("{930C7802-8A8C-48F9-8165-68863BCCD9DD}") = "Installer", "Installer\Inst
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593} = {DC3517FF-AC26-4755-9B7A-EF658FF69593}
 	EndProjectSection
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "MySql.Data.Entity.ModelFirst.Tests", "Tests\MySql.Data.Entity.ModelFirst.Tests\MySql.Data.Entity.ModelFirst.Tests.csproj", "{EF3B193C-EFAE-458C-8077-CB8602365E10}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Commercial|Any CPU = Commercial|Any CPU
@@ -237,6 +239,30 @@ Global
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x64.ActiveCfg = Commercial|x86
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x86.ActiveCfg = Commercial|x86
 		{F533FC43-6C05-4A64-8AF6-72B690EB06C3}.Release|x86.Build.0 = Commercial|x86
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|Any CPU.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|Any CPU.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|Mixed Platforms.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|x64.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Commercial|x86.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|x64.ActiveCfg = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Debug|x86.ActiveCfg = Debug|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|Any CPU.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|Any CPU.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|Mixed Platforms.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|x64.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.GPL|x86.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|Any CPU.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|x64.ActiveCfg = Release|Any CPU
+		{EF3B193C-EFAE-458C-8077-CB8602365E10}.Release|x86.ActiveCfg = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
