@@ -1,0 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
+  <connectionStrings>
+    <add name="MovieDbContext" connectionString="server=localhost;User Id=root;database=test3" providerName="MySql.Data.MySqlClient" />    
+  </connectionStrings>
+</configuration>
