@@ -12,6 +12,10 @@
 - On Model First changed column types generated in sql script to produce more suitable MySql types (MySql bug #59244, Oracle bug #12707104).
 - Modified MySqlProviderServices.GetDbProviderManifestToken to use InvariantCulture when parsing the
   server version (MySQL bug #61901, Oracle bug #12831581)
+- Added changes to correctly generate database on code first and test case, project MySql.Data.Entity.ModelFirst.Tests. While testing the fix corrected 
+  another issue of mysql generation sql scripts using "Name" instead of "Table" property to
+  get the name of MySQL table to issue (MySQL bug #61230, Oracle bug #12728085).
+
 
 Version 6.3.7
 - IPv6 connections are now supported 
